<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2C2C2C"
    >
	<ImageView
	    android:src = "@drawable/vromatic_logo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/logo"
	    />
	<Button android:id="@+id/camera_button"
	    	android:layout_width="300dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/camera_button_text"
	    	android:gravity="center_horizontal"
	    />
	<Button android:id="@+id/file_button"
	    	android:layout_width="300dp"
	    	android:layout_height="wrap_content"
	    	android:text="@string/file_button_text"
	    	android:gravity="center_horizontal"
	    />
</LinearLayout>
