<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    <LinearLayout android:id="@+id/crop_sidebar"
        			android:background="#555"
        			android:layout_width="150sp"
        			android:layout_height="fill_parent"
        			android:orientation="vertical">
        <Button android:id="@+id/crop_finished_button"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/OK"
        	/>
        <ImageView
	        android:id="@+id/preview_image_DL"
	        android:layout_width="fill_parent"
	        android:layout_height="50sp"
	        android:contentDescription="@string/ocr_source"
	        android:padding="10sp"
	        />
        <ImageView
	        android:id="@+id/preview_image_ADDRESS_1"
	        android:layout_width="fill_parent"
	        android:layout_height="50sp"
	        android:contentDescription="@string/ocr_source"
	        android:padding="10sp"
	        />
        <ImageView
	        android:id="@+id/preview_image_DOB"
	        android:layout_width="fill_parent"
	        android:layout_height="50sp"
	        android:contentDescription="@string/ocr_source"
	        android:padding="10sp"
	        />
        <LinearLayout android:id="@+id/rotation_layout"
            		  android:layout_width="fill_parent"
            		  android:layout_height="wrap_content"
            		  android:orientation="horizontal"
            		  android:layout_margin="5sp" >
            <Button android:id="@+id/rotate_left_button"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/rotate_left" />
            <Button android:id="@+id/rotate_right_button"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="@string/rotate_right" />
        </LinearLayout>
    </LinearLayout>
    <view class="com.tanderegg.voterdrive.CropActivity$CropView" 
        	android:id="@+id/crop_view"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent" 
        	/>
</LinearLayout>